src/assets/css/style.css
/* ... */
#webdesignerdepot:hover {
  width: 94px;
  height: 48px;
  background-image: url("../images/logos/webdesignerdepot-hover.png");
  background-repeat: no-repeat;
}

#speckyboy {
  width: 152px;
  height: 35px;
  background-image: url("../images/logos/speckyboy-normal.png");
  background-repeat: no-repeat;
  cursor: pointer;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

#speckyboy:hover {
  width: 152px;
  height: 35px;
  background-image: url("../images/logos/speckyboy-hover.png");
  background-repeat: no-repeat;
}

#pageresource {
  width: 152px;
  height: 26px;
  background-image: url("../images/logos/pageresource-normal.png");
  background-repeat: no-repeat;
  cursor: pointer;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

#pageresource:hover {
  width: 152px;
  height: 26px;
  background-image: url("../images/logos/pageresource-hover.png");
  background-repeat: no-repeat;
}

.client-logo-padding {
  padding-top: 15px;
  padding-bottom: 15px;
}

.client-logo-padding a {
  display: inline-block;
  margin: 0px auto;
}

@media only screen and (min-width: 360px) and (max-width: 1199px) {
  .client-logo-padding a {
    display: flex;
    margin: 0px !important;
    align-items: flex-start !important;
    justify-content: flex-start !important;
    text-align: left !important;
  }
}

.nav-pills a {
  box-shadow: inset 0 0 0 0 #00adef;
  -webkit-transition: all ease 0.5s;
  -moz-transition: all ease 0.5s;
  transition: all ease 0.5s;
  border-radius: 0px !important;
}
.nav-pills a:hover {
  box-shadow: inset 50vh 0 0 0 #00adef;
  color: #ffffff !important;
  border-left: 5px solid #000000;
}
.nav-pills a:hover > span.tab-text {
  color: #ffffff !important;
}
.nav-pills .nav-link.active,
.nav-pills .show > .nav-link {
  background-color: #00adef;
  border-radius: 0px !important;
  border-left: 5px solid #000000;
}
.nav-pills .nav-link.active span.tab-text,
a.nav-link span.tab-text:hover {
  color: #ffffff !important;
}
.nav-pills {
  border-left: 2px solid #dae9f7;
}
span.tab-text {
  padding-left: 25px;
}
.title-job {
  font-size: 22px;
  font-weight: 600;
  margin-bottom: 10px;
}
.title-date {
  color: #00adef;
  font-size: 16px;
  line-height: 16px;
  margin-bottom: 15px;
}
.title-desc {
  font-size: 13px;
  line-height: 30px;
}
ul.title-desc li {
  margin-bottom: 12px;
}
.fa-briefcase {
  margin-right: 6px;
}
/*======================================*/
/* 07: Testimonial
/*======================================*/

.testimonial-wrap {
  margin: -70px 0 -50px;
  padding-bottom: 92px;
}
@media only screen and (max-width: 767px) {
  .testimonial-wrap {
    margin: 0 0 -30px;
    padding-bottom: 20px;
  }
}

.carousel-item .gatsby-image-wrapper {
  width: 190px;
  height: 190px;
}

.carousel-caption {
  color: #252525;
  letter-spacing: 0.03rem;
  line-height: 1.8em;
  padding: 0px 20px;
  margin-top: 20px;
}

.carousel-caption h5 {
  font-size: 19px;
  font-weight: 600;
  margin-top: 30px;
}

.carousel-caption {
  position: unset !important;
  margin-bottom: 50px;
}

.carousel-indicators {
  bottom: -50px;
}

.carousel-control-prev,
.carousel-control-next {
  display: none !important;
}

.carousel-indicators li {
  background-color: #000000 !important;
}

.carousel-indicators li {
  width: 20px !important;
  height: 20px !important;
}

.carousel-item img {
  border-radius: 50%;
  border: 5px solid #00adef;
}

/*======================================*/
/* 08: Blog
/*======================================*/

.blog-slider {
  margin-bottom: -30px;
}
.blog-slider .owl-stage-outer {
  padding-bottom: 30px;
}
.blog-item:hover .blog-item_content {
  -ms-transform: translateY(-50px);
  transform: translateY(-50px);
  -webkit-transform: translateY(-50px);
}
.blog-item .blog-item_img {
  display: block;
}
.blog-item .blog-item_img img {
  width: 100%;
}
.blog-item .blog-item_content {
  background: #fff;
  margin: 15px;
  margin-bottom: -40px;
  padding: 30px;
  -ms-transform: translateY(-40px);
  transform: translateY(-40px);
  -o-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
  -webkit-transform: translateY(-40px);
  -webkit-transition: all 0.4s ease 0s;
  -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1);
}
.blog-item .blog-item_content:hover {
  -ms-transform: translateY(-50px);
  transform: translateY(-50px);
  -webkit-transform: translateY(-50px);
}
.blog-item .blog-item_content p {
  color: #00adef;
  font-size: 14px;
  line-height: 16px;
}
p.blog-item_text-preview {
  font-size: 12px !important;
  color: rgb(37, 37, 37) !important;
  line-height: 21px !important;
  font-weight: 500 !important;
}
.blog-item .blog-item_content h4 {
  font-size: 18px;
  font-weight: 600;
  line-height: 28px;
  text-transform: inherit;
}
.blog-item .blog-item_content h4 a {
  color: #252525;
}
.blog-item .blog-item_content h4 a:hover {
  color: #00adef;
}
.single-blog-head {
  margin-bottom: 40px;
}
@media only screen and (min-width: 480px) and (max-width: 576px) {
  .single-blog-head {
    margin-bottom: 30px;
  }
}
@media only screen and (max-width: 479px) {
  .single-blog-head {
    margin-bottom: 20px;
  }
}
.single-blog-head .date {
  display: block;
  color: #00adef;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}
.single-blog-head h2.title {
  color: #252525 !important;
  font-size: 30px;
  margin: 0;
}
@media only screen and (min-width: 480px) and (max-width: 576px) {
  .single-blog-head .title {
    font-size: 24px;
  }
}
@media only screen and (max-width: 479px) {
  .single-blog-head .title {
    font-size: 24px;
  }
}
.single-blog-image {
  margin-bottom: 40px;
}
/* ... */

